# EscherEsqueHyperbolicTilingCreator

./: CMakeLists.txt  README.md
licenses/: glfw_LICENSE.txt  stb_LICENSE.txt
resources/: tilingSettings.txt
resources/res/settings/: windowSettings.txt
resources/res/shaders/: tilingShader.frag  tilingShader.vert
src/: FundamentalTile.h  FundamentalTriangle.h  HelpfulStringFunctions.cpp  HelpfulStringFunctions.h  HyperbolicComputations.cpp  HyperbolicComputations.h  HyperboloidModelPoint.cpp  HyperboloidModelPoint.h  Image.cpp  Image.h  OPENGLHeaderFiles.h  OPENGLInitializer.cpp  OPENGLInitializer.h  OPENGLWindow.cpp  OPENGLWindow.h  PoincareDiskModelPoint.cpp  PoincareDiskModelPoint.h  Renderer.cpp  Renderer.h  TilingSettings.cpp  TilingSettings.h  WindowSettings.cpp  WindowSettings.h  main.cpp
